# naaf-training-engine

./: Cargo.toml  README.md  package.json  training_engine.d.ts  training_engine.js  training_engine_bg.wasm  training_engine_bg.wasm.d.ts
.github/workflows/: Cargo.toml  build.yml
src/: lib.rs
