[package]
name = "naaf-training-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Utilidades para interactuar con JavaScript y el DOM
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"

# Serializaci칩n
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Candle - Framework ML (Hugging Face)
# Eliminamos 'wgpu' porque no existe en esta versi칩n en crates.io.
# El motor correr치 en CPU (WASM), lo cual es funcional para demos y modelos peque침os.
candle-core = { version = "0.3.3" }
candle-nn = { version = "0.3.3" }

# Aleatoriedad compatible con WASM (Importante para el navegador)
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
